完善科幻皮肤；

--- a/public/static/common/css/theme/_sicfi.scss
+++ b/public/static/common/css/theme/_sicfi.scss
@@ -685,3 +685,8 @@ $box-shape: polygon(0 0, 100% 0, 100% calc(100% - 10px), calc(100% - 10px) 100%,
     color: $main-color !important;
 
 }
+
+.layui-layout-admin .layuimini-logo {
+    background-color: $black-color !important;
+
+}
