完善皮肤配置缓存；完善gtk；适配layui2.7；

--- a/public/static/common/css/theme/_gtk.scss
+++ b/public/static/common/css/theme/_gtk.scss
@@ -633,3 +633,9 @@
 .layui-layer-iframe {
     border-radius: 20px;
 }
+
+.layuimini-tab .layui-tab-control>li {
+    background-color: #e1dedb;
+    border-style    : solid;
+    border-color    : #cdc7c2;
+}
