--- a/public/static/common/css/theme/_gtk.scss
+++ b/public/static/common/css/theme/_gtk.scss
@@ -381,8 +381,8 @@
     position           : relative;
     outline            : none;
     overflow           : visible;
-    line-height        : 28px;
-    height             : 28px;
+    line-height        : 22px;
+    height             : 22px;
     border-radius      : 5px;
     transition         : all .15s cubic-bezier(.25, .46, .45, .94);
     padding            : 4px 9px;
@@ -638,4 +638,34 @@
     background-color: #e1dedb;
     border-style    : solid;
     border-color    : #cdc7c2;
+}
+
+.form-search .layui-btn {
+    height     : 32px;
+    line-height: 22px;
+}
+
+.form-search .layui-form-select dl {
+    transition             : all 80ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    background-color       : #ffffff;
+    background-clip        : padding-box;
+    border                 : 1px solid rgba(0, 0, 0, 0.23);
+    border-top-left-radius : 0;
+    border-top-right-radius: 0;
+    border-radius          : 9px;
+    border-top-left-radius : 0px;
+    border-top-right-radius: 0px;
+    box-shadow             : 0 1px 3px 2px rgba(0, 0, 0, 0.08);
+    top                    : 28px;
+}
+
+.layui-form-select dl dd,
+.layui-form-select dl dt {
+    height     : 30px;
+    line-height: 30px;
+    padding    : 0 10px;
+}
+
+.layuimini-container .layui-form-select dl dd.layui-this{
+    background-color: #3c88e5 !important;
 }
