--- a/public/static/common/css/theme/index.scss
+++ b/public/static/common/css/theme/index.scss
@@ -13,3 +13,19 @@
 .elem-style-gtk {
     @import 'gtk';
 }
+
+.elem-style-nes {
+    @import 'nes';
+
+}
+
+@font-face {
+    font-family: "ark-pixel";
+    src        : url('./nes/ark-pixel-font-12px/ark-pixel-12px-zh_cn.ttf') format('truetype'),
+        url('./nes/ark-pixel-font-12px/ark-pixel-12px-zh_hk.ttf') format('truetype'),
+        url('./nes/ark-pixel-font-12px/ark-pixel-12px-zh_tr.ttf') format('truetype'),
+        url('./nes/ark-pixel-font-12px/ark-pixel-12px-zh_tw.ttf') format('truetype'),
+        url('./nes/ark-pixel-font-12px/ark-pixel-12px-ja.ttf') format('truetype'),
+        url('./nes/ark-pixel-font-12px/ark-pixel-12px-ko.ttf') format('truetype'),
+        url('./nes/ark-pixel-font-12px/ark-pixel-12px-latin.ttf') format('truetype');
+}
