完成像素风皮肤；完善主体设置；完善其他皮肤细节；

--- a/public/static/common/css/theme/_gtk.scss
+++ b/public/static/common/css/theme/_gtk.scss
@@ -669,3 +669,7 @@
 .layuimini-container .layui-form-select dl dd.layui-this{
     background-color: #3c88e5 !important;
 }
+
+.layui-table-header .layui-table {
+    margin-bottom: 0;
+}
