完善像素风皮肤；

--- a/public/static/common/css/theme/_nes.scss
+++ b/public/static/common/css/theme/_nes.scss
@@ -162,6 +162,10 @@ $border-line-width:3px;
 
 }
 
+.layui-tab-title li {
+    font-size: 18px;
+}
+
 .layui-nav-tree .layui-nav-item {
     border-bottom: 3px solid #212529;
 }
